# lsgfw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libglfw.so.3.4
dependencies/include/glfw3/: glfw3.h
dependencies/include/stb/: stb_ds.h
dependencies/stb/: stb_ds.h
essentials/lsgfw_buffers/: CMakeLists.txt
essentials/lsgfw_buffers/include/: lsgfw_buffers.h
essentials/lsgfw_buffers/src/: lsgfw_buffers.c
essentials/lsgfw_global_sharing/: CMakeLists.txt
essentials/lsgfw_global_sharing/include/: lsgfw_global_sharing.h
essentials/lsgfw_global_sharing/src/: lsgfw_global_sharing.c
essentials/lsgfw_script_utils/: CMakeLists.txt
essentials/lsgfw_script_utils/include/: lsgfw_script_utils.h
essentials/lsgfw_script_utils/src/: lsgfw_script_utils.c
essentials/lsgfw_shaders/: CMakeLists.txt
essentials/lsgfw_shaders/include/: lsgfw_shaders.h
essentials/lsgfw_shaders/src/: lsgfw_shaders.c
essentials/lsgfw_storage_buffers/: CMakeLists.txt
essentials/lsgfw_storage_buffers/include/: lsgfw_storage_buffers.h
essentials/lsgfw_storage_buffers/src/: lsgfw_storage_buffers.c
include/: ls_plugs.h  lsgfw.h
include/LSGFW/: lsgfw.h
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/glfw-3.4/: CMakeLists.txt
src/: lsgfw.c  scripts.c  shared_lib.c  util.c  vk.c  vk_handler.c  window.c  world.c
tests/cube/: CMakeLists.txt
tests/cube/assets/shaders/test/: fragment.glsl  vertex.glsl
tests/cube/assets/test/: vertex.glsl
tests/cube/include/: cube.h
tests/cube/src/: main.c
tests/cube/src/plugins/: CMakeLists.txt
tests/cube/src/plugins/src/: spinning_cube.c  window_handler.c
tests/cube/src/scripts/: CMakeLists.txt
tests/cube/src/scripts/include/: lsgfw_vk_handler.h  window_handler.h
tests/cube/src/scripts/src/: lsgfw_vk_handler.c  spinning_cube.c  triangles.c  window_handler.c
tests/glfw_opengl/: CMakeLists.txt
tests/glfw_opengl/include/: glfw_opengl.h
tests/glfw_opengl/src/: main.c
tests/glfw_opengl/src/scripts/: CMakeLists.txt
tests/glfw_opengl/src/scripts/include/: test.h
tests/glfw_opengl/src/scripts/src/: test.c
